// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with notifications lays out correctly on larger screens 1`] = `
<RCTScrollView
  contentContainerStyle={Object {}}
  onLayout={[Function]}
  onScroll={[Function]}
  scrollEventThrottle={100}
>
  <View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 40,
            "marginRight": 40,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <RCTScrollView
        dataSource={
          ListViewDataSource {
            "items": 2,
          }
        }
        onEndReached={[Function]}
        renderRow={[Function]}
        renderScrollComponent={[Function]}
        renderSeparator={[Function]}
        scrollEnabled={false}
        style={
          Object {
            "marginTop": 20,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "marginTop": 20,
              }
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hitSlop={undefined}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
              testID={undefined}
            >
              <Image
                source={
                  Object {
                    "uri": "cloudfront.url",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#f8f8f8",
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 10,
                    "width": 40,
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                      },
                      Object {
                        "fontSize": 13,
                      },
                      Object {
                        "fontFamily": "AvantGardeGothicITC",
                      },
                    ]
                  }
                >
                  JEAN-MICHEL BASQUIAT
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "fontSize": 17,
                      },
                      Object {
                        "color": "#666666",
                        "fontSize": 15,
                        "marginTop": 2,
                      },
                      Object {
                        "fontFamily": "AGaramondPro-Regular",
                      },
                    ]
                  }
                >
                  1 Work Added
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <View
                onLayout={[Function]}
              >
                <View
                  accessibilityLabel="Artworks Content View"
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "marginTop": 20,
              }
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hitSlop={undefined}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
              testID={undefined}
            >
              <Image
                source={
                  Object {
                    "uri": "cloudfront.url",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#f8f8f8",
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 10,
                    "width": 40,
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                      },
                      Object {
                        "fontSize": 13,
                      },
                      Object {
                        "fontFamily": "AvantGardeGothicITC",
                      },
                    ]
                  }
                >
                  ANA MENDIETA
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "fontSize": 17,
                      },
                      Object {
                        "color": "#666666",
                        "fontSize": 15,
                        "marginTop": 2,
                      },
                      Object {
                        "fontFamily": "AGaramondPro-Regular",
                      },
                    ]
                  }
                >
                  2 Works Added
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <View
                onLayout={[Function]}
              >
                <View
                  accessibilityLabel="Artworks Content View"
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTScrollView>
`;

exports[`with notifications lays out correctly on small screens 1`] = `
<RCTScrollView
  contentContainerStyle={Object {}}
  onLayout={[Function]}
  onScroll={[Function]}
  scrollEventThrottle={100}
>
  <View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 20,
            "marginRight": 20,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <RCTScrollView
        dataSource={
          ListViewDataSource {
            "items": 2,
          }
        }
        onEndReached={[Function]}
        renderRow={[Function]}
        renderScrollComponent={[Function]}
        renderSeparator={[Function]}
        scrollEnabled={false}
        style={
          Object {
            "marginTop": 0,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "marginTop": 20,
              }
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hitSlop={undefined}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
              testID={undefined}
            >
              <Image
                source={
                  Object {
                    "uri": "cloudfront.url",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#f8f8f8",
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 10,
                    "width": 40,
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                      },
                      Object {
                        "fontSize": 13,
                      },
                      Object {
                        "fontFamily": "AvantGardeGothicITC",
                      },
                    ]
                  }
                >
                  JEAN-MICHEL BASQUIAT
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "fontSize": 17,
                      },
                      Object {
                        "color": "#666666",
                        "fontSize": 15,
                        "marginTop": 2,
                      },
                      Object {
                        "fontFamily": "AGaramondPro-Regular",
                      },
                    ]
                  }
                >
                  1 Work Added
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <View
                onLayout={[Function]}
              >
                <View
                  accessibilityLabel="Artworks Content View"
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "marginTop": 20,
              }
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hitSlop={undefined}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
              testID={undefined}
            >
              <Image
                source={
                  Object {
                    "uri": "cloudfront.url",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#f8f8f8",
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 10,
                    "width": 40,
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                      },
                      Object {
                        "fontSize": 13,
                      },
                      Object {
                        "fontFamily": "AvantGardeGothicITC",
                      },
                    ]
                  }
                >
                  ANA MENDIETA
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "fontSize": 17,
                      },
                      Object {
                        "color": "#666666",
                        "fontSize": 15,
                        "marginTop": 2,
                      },
                      Object {
                        "fontFamily": "AGaramondPro-Regular",
                      },
                    ]
                  }
                >
                  2 Works Added
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <View
                onLayout={[Function]}
              >
                <View
                  accessibilityLabel="Artworks Content View"
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTScrollView>
`;

exports[`without notifications lays out correctly on larger screens 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 1,
    }
  }
  onLayout={[Function]}
  onScroll={[Function]}
  scrollEventThrottle={100}
>
  <View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 40,
            "marginRight": 40,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "paddingBottom": 60,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "height": 1,
              }
            }
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "marginBottom": 25,
                "marginTop": 25,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontSize": 17,
                  },
                  Object {
                    "fontSize": 20,
                  },
                  Object {
                    "fontFamily": "AGaramondPro-Regular",
                  },
                ]
              }
            >
              You’re not following any artists yet
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontSize": 17,
                  },
                  Object {
                    "color": "#666666",
                    "fontSize": 16,
                    "marginLeft": 20,
                    "marginRight": 20,
                    "marginTop": 10,
                    "textAlign": "center",
                  },
                  Object {
                    "fontFamily": "AGaramondPro-Regular",
                  },
                ]
              }
            >
              Follow artists to get updates about new works that become available.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "black",
                "height": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`without notifications lays out correctly on small screens 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 1,
    }
  }
  onLayout={[Function]}
  onScroll={[Function]}
  scrollEventThrottle={100}
>
  <View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 20,
            "marginRight": 20,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "paddingBottom": 60,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "height": 1,
              }
            }
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "marginBottom": 25,
                "marginTop": 25,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontSize": 17,
                  },
                  Object {
                    "fontSize": 20,
                  },
                  Object {
                    "fontFamily": "AGaramondPro-Regular",
                  },
                ]
              }
            >
              You’re not following any artists yet
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontSize": 17,
                  },
                  Object {
                    "color": "#666666",
                    "fontSize": 16,
                    "marginLeft": 20,
                    "marginRight": 20,
                    "marginTop": 10,
                    "textAlign": "center",
                  },
                  Object {
                    "fontFamily": "AGaramondPro-Regular",
                  },
                ]
              }
            >
              Follow artists to get updates about new works that become available.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "black",
                "height": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
